src/main/java/com/example/springproject/errors/ExceptionError.java
package com.example.springproject.errors;

public class ExceptionError {
}
